<resources>
    <string name="app_name">小熊天气</string>
    <string name="image">image</string>
    <string name="input_address">输入地址</string>
    <string name="weather_forecast">天气预报</string>
    <string name="life_index">生活指数</string>
    <string name="cold_risk">感冒</string>
    <string name="dressing">穿衣</string>
    <string name="ultraviolet">紫外线</string>
    <string name="car_washing">洗车</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="about">关于</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="all_rights_reserved">© 2020 吴英昊. ALL RIGHTS RESERVED.</string>
</resources>